# mlai-research

./: .gitignore  README.md  pyproject.toml
config/: base.conf
mlai_research/: extract_features.py  gen_synthetic_points.py  log.py  prep_model_data.py  preprocess_rasters.py  preprocess_shp.py  segment.py  utils.py
notebooks/: debug-extract-features-001.ipynb  debug-preprocess-rasters-001.ipynb  debug-preprocess-rasters-002.ipynb  debug-segment-001.ipynb  debug-segment-002.ipynb  example.db  explore-data-002.ipynb  explore-segmentation-001.ipynb  explore-segmentation-002.ipynb  explore-segmentation-003.ipynb  explore-segmentation-004.ipynb  explore-segmentation-006.ipynb  explore-segmentation-007.ipynb  explore-segmentation-008.ipynb  explore-segmentation-009.ipynb  extract-features-001.ipynb  extract-features-002.ipynb  generate-new-points-001.ipynb  modelling-001.ipynb  modelling-002.ipynb  modelling-003.ipynb  modelling-004.ipynb  modelling-005.ipynb  prepare-model-input-001.ipynb  preprocess-hyps-001.ipynb  preprocess-rasters-001.ipynb  preprocess-raw-001.ipynb  preprocess-shp-files-001.ipynb  preprocess-shp-files-002.ipynb  preprocess-shp-files.ipynb  segmentation-001.ipynb  viz-data-001.ipynb
