[tool.poetry]
name = "mlai-research"
version = "0.1.0"
description = ""
authors = ["DaytaSigntist <ashwineep94@gmail.com>"]
readme = "README.md"
packages = [{include = "mlai_research"}]

[tool.poetry.dependencies]
python = "^3.9"
rasterio = "^1.3.9"
matplotlib = "^3.8.0"
geopandas = "^0.14.0"
earthpy = "^0.9.4"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
